Restore Mapbox token for live map rendering

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 </div>
 
 <script>
-mapboxgl.accessToken = 'YOUR_MAPBOX_PUBLIC_TOKEN';
+mapboxgl.accessToken = 'pk.eyJ1IjoiY2xhd3JlbXkiLCJhIjoiY21sdzFlMTU0MGRxaDNlb252N3U1aWp5MyJ9.gJ3BZ2twJBzvlIDlW_sA7Q';
 
 const wardData = {
   'A':{ description:'Greenville / West Side',       incidents:312, level:'High',        topCrime:'Assault',   color:'#e63946', dot:'#e63946' },
