--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     --bg:#0a0c10; --panel:#111318; --border:#1e2229;
     --accent:#e63946; --blue:#457b9d;
     --text:#e8eaed; --muted:#6b7280;
+    --trend-up:#e63946; --trend-down:#52b788; --trend-neutral:#e9c46a;
   }
   body { font-family:'DM Sans',sans-serif; background:var(--bg); color:var(--text); display:flex; height:100vh; overflow:hidden; }
   #sidebar { width:300px; min-width:300px; background:var(--panel); border-right:1px solid var(--border); display:flex; flex-direction:column; overflow-y:auto; z-index:10; }
@@ -33,8 +34,41 @@
   .stat-card.red .stat-value { color:#e63946; }
   .stat-card.yellow .stat-value { color:#e9c46a; }
   .stat-card.blue .stat-value { color:#457b9d; }
+  .stat-sub { font-size:10px; color:#6b7280; margin-top:3px; font-family:'Space Mono',monospace; }
   .stat-change { font-size:10px; margin-top:4px; font-family:'Space Mono',monospace; }
-  .up{color:#e63946;} .down{color:#52b788;}
+  .up{color:var(--trend-up);} .down{color:var(--trend-down);} .neutral{color:var(--trend-neutral);}
+  .with-tooltip{cursor:help;}
+  .with-tooltip:hover::after{
+    content:attr(data-tooltip); position:absolute; left:10px; right:10px; bottom:10px; z-index:3;
+    background:#0b1016; border:1px solid #1e2229; border-radius:6px; padding:8px 9px;
+    color:#e8eaed; font-size:10px; line-height:1.4; font-family:'DM Sans',sans-serif;
+    box-shadow:0 8px 18px rgba(0,0,0,.45);
+  }
+  .with-tooltip:hover::before{height:2px;}
+  .nibrs-note{
+    border:1px solid #e9c46a; background:rgba(233,196,106,.08); border-radius:6px;
+    padding:10px; font-size:11px; line-height:1.45; color:#d6d9df; margin-bottom:12px;
+  }
+  .crime-table-wrap{background:var(--bg); border:1px solid var(--border); border-radius:6px; overflow:hidden;}
+  .crime-table{width:100%; border-collapse:collapse; font-size:11px;}
+  .crime-table th{padding:8px 10px; text-align:left; color:#6b7280; font-family:'Space Mono',monospace; font-size:9px; letter-spacing:.06em; text-transform:uppercase; border-bottom:1px solid var(--border);}
+  .crime-table td{padding:8px 10px; border-bottom:1px solid var(--border); vertical-align:middle;}
+  .crime-table tr:last-child td{border-bottom:none;}
+  .crime-type-note{color:#f4a261; font-size:10px;}
+  .crime-metric{text-align:right; font-family:'Space Mono',monospace; white-space:nowrap;}
+  .crime-note{font-size:11px; color:#aeb4bf; margin-top:10px; line-height:1.45; font-style:italic;}
+  .crime-source{font-size:10px; color:#6b7280; margin-top:8px; font-family:'Space Mono',monospace;}
+  details.collapse-panel{border:1px solid var(--border); border-radius:6px; background:var(--bg);}
+  details.collapse-panel summary{
+    list-style:none; cursor:pointer; padding:10px; font-size:12px; font-weight:500; user-select:none;
+  }
+  details.collapse-panel summary::-webkit-details-marker{display:none;}
+  .sources-list{padding:0 10px 10px; display:flex; flex-direction:column; gap:8px;}
+  .source-card{border:1px solid var(--border); border-radius:6px; padding:9px; background:#0d1015;}
+  .source-name{font-size:12px; font-weight:600; margin-bottom:3px;}
+  .source-url{font-family:'Space Mono',monospace; font-size:10px; color:#6b7280; text-decoration:none; word-break:break-all;}
+  .source-url:hover{color:#8fb8d3; text-decoration:underline;}
+  .source-desc{font-size:10px; color:#b6bcc7; line-height:1.4; margin-top:5px;}
   .ward-list,.precinct-list { display:flex; flex-direction:column; gap:8px; }
   .ward-item { display:flex; align-items:center; gap:10px; padding:8px 10px; background:var(--bg); border:1px solid var(--border); border-radius:5px; cursor:pointer; transition:border-color .2s; }
   .ward-item:hover { border-color:var(--blue); }
@@ -92,8 +126,36 @@
       <div class="stat-card red"><div class="stat-label">Homicides</div><div class="stat-value">7</div><div class="stat-change down">▼ 40% vs 2023</div></div>
       <div class="stat-card yellow"><div class="stat-label">Shootings</div><div class="stat-value">29</div><div class="stat-change down">▼ 45% vs 2023</div></div>
       <div class="stat-card red"><div class="stat-label">Assaults</div><div class="stat-value">986</div><div class="stat-change up">▲ 25% vs 2023</div></div>
-      <div class="stat-card blue"><div class="stat-label">Crime Index</div><div class="stat-value">251</div><div class="stat-change up">▲ 13% vs 2023</div></div>
+      <div class="stat-card blue with-tooltip" data-tooltip="City-Data crime index. US average is 235.3. Higher = more crime. JC is near the national average.">
+        <div class="stat-label">Crime Index</div>
+        <div class="stat-value">251</div>
+        <div class="stat-sub">US avg: 235.3</div>
+        <div class="stat-change up">▲ 13% vs 2023</div>
+      </div>
     </div>
+  </div>
+
+  <div class="section">
+    <div class="section-label">2024 Crime Breakdown</div>
+    <div class="nibrs-note">⚠️ <strong>Data Note:</strong> JCPD switched to the NIBRS reporting system in January 2024, replacing the older UCR/CompStat format. Pre-2024 year-over-year comparisons may reflect methodology changes, not actual crime shifts. NIBRS captures more crime categories and greater detail than previous systems.</div>
+    <div class="crime-table-wrap">
+      <table class="crime-table">
+        <thead>
+          <tr><th>Crime Type</th><th style="text-align:right;">Count + Trend</th></tr>
+        </thead>
+        <tbody>
+          <tr><td>Violent Crime (total)</td><td class="crime-metric">609 <span class="down">↓ 47.8%</span></td></tr>
+          <tr><td>Property Crime (total)</td><td class="crime-metric">3,825 <span class="down">↓ 2.9%</span></td></tr>
+          <tr><td>Aggravated Assault</td><td class="crime-metric">986 <span class="up">↑ 25%</span></td></tr>
+          <tr><td>Total Thefts</td><td class="crime-metric">4,125 <span class="up">↑ 41%</span></td></tr>
+          <tr><td>Auto Theft</td><td class="crime-metric">806 <span class="up">↑ 28%</span></td></tr>
+          <tr><td>Robbery <span class="crime-type-note">(NJ Statewide)</span></td><td class="crime-metric">9,743 <span class="down">↓ 7%</span></td></tr>
+          <tr><td>Illegal Guns Recovered</td><td class="crime-metric">214 <span class="neutral">—</span></td></tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="crime-note">Homicides (7) and shootings (29) reflect historic lows. Everyday property crime remains elevated.</div>
+    <div class="crime-source">Source: FBI UCR 2024 / jerseycitynj.gov</div>
   </div>
 
   <div class="section">
@@ -120,6 +182,34 @@
   <div class="section">
     <div class="section-label">Police Districts</div>
     <div class="precinct-list" id="precinctList"></div>
+  </div>
+
+  <div class="section">
+    <details class="collapse-panel">
+      <summary>📊 Data Sources</summary>
+      <div class="sources-list">
+        <div class="source-card">
+          <div class="source-name">FBI Crime Data Explorer</div>
+          <a class="source-url" href="https://cde.ucr.cjis.gov" target="_blank" rel="noopener noreferrer">cde.ucr.cjis.gov</a>
+          <div class="source-desc">Federal verified crime data by city. Most recent: 2024 (released Sept 2025).</div>
+        </div>
+        <div class="source-card">
+          <div class="source-name">NJ State Police UCR</div>
+          <a class="source-url" href="https://www.njsp.gov/ucr" target="_blank" rel="noopener noreferrer">njsp.gov/ucr</a>
+          <div class="source-desc">Annual statewide report broken down by municipality. Gold standard for NJ comparisons.</div>
+        </div>
+        <div class="source-card">
+          <div class="source-name">JC Open Data Portal</div>
+          <a class="source-url" href="https://data.jerseycitynj.gov" target="_blank" rel="noopener noreferrer">data.jerseycitynj.gov</a>
+          <div class="source-desc">Official city datasets including JCPD calls-for-service and geographic boundaries.</div>
+        </div>
+        <div class="source-card">
+          <div class="source-name">JC Public Safety Office</div>
+          <a class="source-url" href="https://www.jerseycitynj.gov/cityhall/public_safety" target="_blank" rel="noopener noreferrer">jerseycitynj.gov/cityhall/public_safety</a>
+          <div class="source-desc">Year-end press releases with JCPD-reported stats. Updated annually in December.</div>
+        </div>
+      </div>
+    </details>
   </div>
 
   <div class="data-note">Source: FBI UCR 2024 · jerseycitynj.gov<br>Hover wards &amp; precincts for details<br>Click any item to zoom map</div>
