--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.js"></script>
 <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css">
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.umd.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=DM+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
 <style>
   * { margin:0; padding:0; box-sizing:border-box; }
@@ -63,6 +64,96 @@
   .crime-metric{text-align:right; font-family:'Space Mono',monospace; white-space:nowrap;}
   .crime-note{font-size:11px; color:#aeb4bf; margin-top:10px; line-height:1.45; font-style:italic;}
   .crime-source{font-size:10px; color:#6b7280; margin-top:8px; font-family:'Space Mono',monospace;}
+  .freshness-badge{
+    display:flex;
+    align-items:center;
+    gap:7px;
+    margin-top:10px;
+    padding:7px 9px;
+    border:1px solid var(--border);
+    border-radius:6px;
+    background:var(--bg);
+    color:#6b7280;
+    font-family:'Space Mono',monospace;
+    font-size:9px;
+    letter-spacing:.06em;
+  }
+  .freshness-dot{
+    width:8px;
+    height:8px;
+    border-radius:50%;
+    background:#4ade80;
+    box-shadow:0 0 0 2px rgba(74,222,128,.2);
+    flex-shrink:0;
+  }
+  .chart-header{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    gap:8px;
+    margin-bottom:10px;
+  }
+  .chart-select{
+    background:#0a0c10;
+    border:1px solid #1e2229;
+    color:#e8eaed;
+    border-radius:6px;
+    font-size:11px;
+    font-family:'DM Sans',sans-serif;
+    padding:6px 8px;
+    min-width:148px;
+  }
+  .chart-wrap{
+    background:#111318;
+    border:1px solid #1e2229;
+    border-radius:6px;
+    padding:10px;
+    height:190px;
+  }
+  .summary-table-wrap{
+    background:#111318;
+    border:1px solid #1e2229;
+    border-radius:6px;
+    overflow:hidden;
+  }
+  .summary-table{
+    width:100%;
+    border-collapse:collapse;
+  }
+  .summary-table th{
+    padding:8px 10px;
+    text-align:left;
+    color:#6b7280;
+    border-bottom:1px solid #1e2229;
+    font-size:9px;
+    font-family:'Space Mono',monospace;
+    letter-spacing:.08em;
+    text-transform:uppercase;
+  }
+  .summary-table td{
+    padding:8px 10px;
+    border-bottom:1px solid #1e2229;
+    font-size:11px;
+    color:#e8eaed;
+  }
+  .summary-table tr:last-child td{ border-bottom:none; }
+  .summary-table .offense-critical{ color:#e63946; }
+  .summary-table .ytd-val{
+    font-family:'Space Mono',monospace;
+    font-weight:700;
+    color:#e8eaed;
+  }
+  .summary-table .proj-val{
+    font-family:'Space Mono',monospace;
+    color:#6b7280;
+  }
+  .summary-foot{
+    margin-top:8px;
+    font-size:9px;
+    color:#6b7280;
+    font-family:'Space Mono',monospace;
+    line-height:1.5;
+  }
   details.collapse-panel{border:1px solid var(--border); border-radius:6px; background:var(--bg);}
   details.collapse-panel summary{
     list-style:none; cursor:pointer; padding:10px; font-size:12px; font-weight:500; user-select:none;
@@ -253,6 +344,63 @@
   </div>
 
   <div class="section">
+    <div class="section-label">2025 Key Stats</div>
+    <div class="stats-grid">
+      <div class="stat-card red"><div class="stat-label">Homicides</div><div class="stat-value">10</div><div class="stat-sub">2025 YTD (Jan-Sep)</div></div>
+      <div class="stat-card yellow"><div class="stat-label">Shootings</div><div class="stat-value">31</div><div class="stat-sub">2025 YTD (Jan-Sep)</div></div>
+      <div class="stat-card red"><div class="stat-label">Aggravated Assault</div><div class="stat-value">742</div><div class="stat-sub">2025 YTD (Jan-Sep)</div></div>
+      <div class="stat-card blue"><div class="stat-label">Theft</div><div class="stat-value">3,019</div><div class="stat-sub">2025 YTD (Jan-Sep)</div></div>
+      <div class="stat-card yellow"><div class="stat-label">Stolen Vehicles</div><div class="stat-value">648</div><div class="stat-sub">2025 YTD (Jan-Sep)</div></div>
+      <div class="stat-card blue"><div class="stat-label">Robbery</div><div class="stat-value">294</div><div class="stat-sub">2025 YTD (Jan-Sep)</div></div>
+    </div>
+    <div class="freshness-badge"><span class="freshness-dot"></span>NIBRS · Jan-Sep 2025 · Updated Quarterly</div>
+  </div>
+
+  <div class="section">
+    <div class="section-label">2025 Monthly Breakdown</div>
+    <div class="chart-header">
+      <div class="stat-label" style="margin-bottom:0;">Category</div>
+      <select id="crime-category-select" class="chart-select">
+        <option value="Theft" selected>Theft</option>
+        <option value="Stolen Vehicles">Stolen Vehicles</option>
+        <option value="Robbery">Robbery</option>
+        <option value="Aggravated Assault">Aggravated Assault</option>
+        <option value="Criminal Mischief">Criminal Mischief</option>
+        <option value="Burglary">Burglary</option>
+        <option value="Homicides">Homicides</option>
+        <option value="Shooting Incidents">Shooting Incidents</option>
+        <option value="Shooting Victims">Shooting Victims</option>
+      </select>
+    </div>
+    <div class="chart-wrap">
+      <canvas id="crime-trend-chart"></canvas>
+    </div>
+  </div>
+
+  <div class="section">
+    <div class="section-label">2025 YTD Summary</div>
+    <div class="summary-table-wrap">
+      <table class="summary-table">
+        <thead>
+          <tr><th>Offense</th><th>YTD</th><th>Proj. Full Year</th></tr>
+        </thead>
+        <tbody>
+          <tr><td class="offense-critical">Homicides</td><td class="ytd-val">10</td><td class="proj-val">~13</td></tr>
+          <tr><td class="offense-critical">Shooting Incidents</td><td class="ytd-val">31</td><td class="proj-val">~41</td></tr>
+          <tr><td class="offense-critical">Shooting Victims</td><td class="ytd-val">40</td><td class="proj-val">~53</td></tr>
+          <tr><td>Robbery</td><td class="ytd-val">294</td><td class="proj-val">~392</td></tr>
+          <tr><td>Aggravated Assault</td><td class="ytd-val">742</td><td class="proj-val">~989</td></tr>
+          <tr><td>Criminal Mischief</td><td class="ytd-val">1,706</td><td class="proj-val">~2,275</td></tr>
+          <tr><td>Burglary</td><td class="ytd-val">375</td><td class="proj-val">~500</td></tr>
+          <tr><td>Theft</td><td class="ytd-val">3,019</td><td class="proj-val">~4,025</td></tr>
+          <tr><td>Stolen Vehicles</td><td class="ytd-val">648</td><td class="proj-val">~864</td></tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="summary-foot">Source: JCPD Official Stats · NIBRS · Projection = YTD ÷ 9 × 12</div>
+  </div>
+
+  <div class="section">
     <div class="section-label">2024 Crime Breakdown</div>
     <div class="nibrs-note">⚠️ <strong>Data Note:</strong> JCPD switched to the NIBRS reporting system in January 2024, replacing the older UCR/CompStat format. Pre-2024 year-over-year comparisons may reflect methodology changes, not actual crime shifts. NIBRS captures more crime categories and greater detail than previous systems.</div>
     <div class="crime-table-wrap">
@@ -367,6 +515,11 @@
           <a class="source-url" href="https://www.jerseycitynj.gov/cityhall/public_safety" target="_blank" rel="noopener noreferrer">jerseycitynj.gov/cityhall/public_safety</a>
           <div class="source-desc">Year-end press releases with JCPD-reported stats. Updated annually in December.</div>
         </div>
+        <div class="source-card">
+          <div class="source-name">2025 Crime Stats: JCPD Official Stats (NIBRS)</div>
+          <a class="source-url" href="https://cdnsm5-hosted.civiclive.com/UserFiles/Servers/Server_6189660/File/City%20Hall/Public%20Safety/UCR%20Crime%20Data%20Report/2025-JCPD-Crime-Stats.png" target="_blank" rel="noopener noreferrer">cdnsm5-hosted.civiclive.com/.../2025-JCPD-Crime-Stats.png</a>
+          <div class="source-desc">Official January-September 2025 JCPD crime statistics image published by Jersey City Public Safety.</div>
+        </div>
       </div>
     </details>
   </div>
@@ -450,6 +603,25 @@ const wardData = {
   'F':{ description:'Greenville / South',           incidents:118, level:'Lower',       topCrime:'Vandalism', color:'#1a472a', dot:'#74c69d', safetyScore:79 }
 };
 
+const crimeStats2025 = {
+  source: "JCPD Official Stats (NIBRS Data, subject to revision pending investigation)",
+  coverage: "January - September 2025",
+  months: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep"],
+  categories: {
+    "Shooting Incidents": [2, 3, 2, 4, 8, 5, 1, 2, 4],
+    "Shooting Victims":   [3, 3, 3, 6, 8, 9, 1, 2, 5],
+    "Homicides":          [5, 0, 0, 2, 0, 1, 1, 0, 1],
+    "Robbery":            [47, 35, 18, 37, 31, 30, 37, 26, 33],
+    "Aggravated Assault": [82, 65, 101, 86, 73, 95, 81, 65, 94],
+    "Criminal Mischief":  [173, 132, 247, 198, 171, 203, 202, 202, 178],
+    "Burglary":           [69, 25, 38, 44, 48, 32, 31, 46, 42],
+    "Theft":              [329, 250, 353, 369, 387, 342, 333, 336, 320],
+    "Stolen Vehicles":    [60, 66, 58, 68, 70, 83, 85, 77, 81]
+  }
+};
+
+let crimeChart;
+
 function calculateSafetyScore(ward){
   const cityAvg = 198;
   const incidents = ward.incidents;
@@ -466,6 +638,65 @@ function getSafetyTier(score){
   if(score >= 35) return { label:'Caution', color:'#fb923c' };
   return { label:'High Risk', color:'#e63946' };
 }
+
+function initCrimeChart(category) {
+  const canvas = document.getElementById('crime-trend-chart');
+  if (!canvas || typeof Chart === 'undefined') return;
+
+  const selectedCategory = crimeStats2025.categories[category] ? category : 'Theft';
+  const ctx = canvas.getContext('2d');
+  const values = crimeStats2025.categories[selectedCategory];
+  const maxVal = Math.max(...values);
+
+  if (crimeChart) crimeChart.destroy();
+  crimeChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: crimeStats2025.months,
+      datasets: [{
+        data: values,
+        backgroundColor: values.map((v) => {
+          const i = v / maxVal;
+          if (i > 0.8) return 'rgba(230,57,70,0.85)';
+          if (i > 0.6) return 'rgba(251,146,60,0.85)';
+          if (i > 0.4) return 'rgba(250,204,21,0.85)';
+          return 'rgba(74,222,128,0.85)';
+        }),
+        borderRadius: 3,
+        borderSkipped: false
+      }]
+    },
+    options: {
+      responsive: true,
+      maintainAspectRatio: false,
+      plugins: {
+        legend: { display: false }
+      },
+      scales: {
+        x: {
+          grid: { color: '#1e2229' },
+          ticks: { color: '#6b7280', font: { family: 'Space Mono', size: 9 } }
+        },
+        y: {
+          grid: { color: '#1e2229' },
+          ticks: { color: '#6b7280', font: { family: 'Space Mono', size: 9 } },
+          beginAtZero: true
+        }
+      }
+    }
+  });
+}
+
+function setupCrimeTrendChart() {
+  const select = document.getElementById('crime-category-select');
+  if (!select) return;
+  initCrimeChart(select.value || 'Theft');
+  select.addEventListener('change', function onCrimeCategoryChange() {
+    initCrimeChart(this.value);
+  });
+}
+
+setupCrimeTrendChart();
 
 const heatmapPointsData = {
   type:'FeatureCollection',
