Update About section copy and data recency notes

--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
       <div class="about-body">
         <p>Jersey City's crime data is scattered across federal, state, and city sources — each with different formats, methodologies, and update schedules. Most residents, real estate professionals, and stakeholders have no way to navigate it.</p>
         <p>This dashboard consolidates verified FBI UCR data, NJ State Police reports, and JCPD statistics into a single view, updated annually each January when new federal data is released.</p>
-        <p>Built by a Jersey City Police Officer. Badge #3458, North District.</p>
-        <p>Data is current as of: 2024 (FBI UCR, released Sept 2025)<br>Next update: January 2026 when 2025 data becomes available</p>
+        <p>Built by a Jersey City resident.</p>
+        <p>Data current as of: 2024 (FBI UCR, released Sept 2025)<br>2025 YTD: Jan-Sep 2025 (JCPD NIBRS, updated quarterly)<br>Next full update: January 2027 when 2026 data becomes available.</p>
       </div>
     </details>
   </div>
