Add sidebar disclaimer above ad slot

--- a/index.html
+++ b/index.html
@@ -525,6 +525,13 @@
   .biq-ad-link:hover {
     color: var(--cyan);
   }
+  .biq-disclaimer {
+    font-size: 0.62rem;
+    color: var(--muted);
+    line-height: 1.6;
+    padding: 8px 16px 4px;
+    opacity: 0.6;
+  }
 </style>
 </head>
 <body>
@@ -753,6 +760,7 @@
     </details>
   </div>
 
+  <p class="biq-disclaimer">Data from official government sources for informational purposes only. Not legal or financial advice. BlockIQ JC is not responsible for decisions made based on this information.</p>
   <div class="biq-ad-slot">
     <div class="biq-ad-label">Featured Agent</div>
     <div class="biq-ad-name">Advertise Here</div>
